@@ -843,7 +843,7 @@ characters ("[", "]") are not part of the above list
 
         jenaFactory = new IRIFactory();
 //        jenaFactory.dnsViolation(false,false);
-//        jenaFactory.setSameSchemeRelativeReferences("file");
+        jenaFactory.setSameSchemeRelativeReferences("file");
         jenaFactory.shouldViolation(false,false);
         jenaFactory.securityViolation(false,false);
         jenaFactory.useSpecificationRDF(false);
